用户管理接口补充